Sun Oct 11 22:16:27 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/DB2_db.cc: Added fix suggested by Domotor Akos
	<dome@impulzus.sch.bme.hu> with (char *)NULL cast.

	* htlib/Attic/mytimegm.cc: Removed old mytimegm function.

	* installdir/syntax.html: Improved boolean method error
	message. It now gives examples of boolean expressions.

	* htcommon/defaults.cc, htsearch/Display.cc, htsearch/Display.h,
	htsearch/parser.cc: Added htsearch logging patch from Alexander
	Bergolth.

	* htmerge/Makefile.in, htnotify/Makefile.in, htsearch/Makefile.in,
	include/htconfig.h.in, htdig/Document.cc, htdig/Images.cc,
	htdig/Makefile.in, htfuzzy/Endings.cc, htfuzzy/Fuzzy.cc,
	htfuzzy/Makefile.in, htfuzzy/Prefix.cc, htfuzzy/htfuzzy.cc,
	htlib/DB2_db.cc, htlib/Makefile.in, Attic/.version,
	Makefile.config.in, Makefile.in, configure, configure.in,
	htcommon/DocumentDB.cc, htcommon/Makefile.in, mkinstalldirs:
	Updated Makefiles and configure variables, removed more compiler
	warnings.

Fri Oct  9 00:29:18 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc: Fixed typo with "meta_desription_factor".

	* htdig/Images.cc: Use user_agent config in GET request.
	
Thu Oct  8 09:05:41 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* installdir/syntax.html: Improved Boolean search description.

Mon Oct  5 11:30:16 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* contrib/ewswrap/ewswrap.cgi, contrib/ewswrap/htwrap.cgi,
	contrib/ewswrap/README: New scripts, contributed by John Grohol
	PsyD <johngr@cmhcsys.com>.

Fri Oct  2 13:11:24 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc: Added check for docs removed with
	noindex. Now words in these docs should be ignored for the word
	db.

Fri Oct  2 13:09:04 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* CONFIG Makefile.config.in Makefile.in htcommon/Makefile.in,
	htcommon/defaults.cc htdig/Makefile.in htdig/main.cc,