@@ -98,6 +98,12 @@
         variable is.
       </dd>
       <dt>
+        <b>CURRENT</b>
+      </dt>
+      <dd>
+        The number of the current match.
+      </dd>
+      <dt>
         <b>DESCRIPTIONS</b>
       </dt>
       <dd>
